deployments/smart-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart
  labels:
    name: smart
