deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-web
  namespace: smart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-web
  template:
    metadata:
      labels:
        app: admin-web
    spec:
      containers:
        - name: admin-web
          image: asia-southeast1-docker.pkg.dev/docme-317706/smart-ecommerce/admin-web:Production_0.0.9
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '250m'
      imagePullSecrets:
        - name: gcr-artifact-key
