deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-web
  namespace: smart
spec:
  selector:
    app: admin-web
  ports:
    - port: 3000
      targetPort: 3000
