deployments/ingresse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  namespace: smart
spec:
  ingressClassName: nginx
  rules:
    - host: smartwatchadmin.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-web
                port:
                  number: 3000
    - host: www.smartwatchadmin.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-web
                port:
                  number: 3000
